# python-pytest-testing-project-79

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: my-workflow.yaml
PageLoader/: UrlCLass.py  main.py  page_loader.py
page_loader/: UrlClass.py  main.py  page_loader.py
tests/: FIxture_for_test_2.html  Fixture_for_test_1.html  test_page_loader.py
