[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["BananfonBan <bananfonban@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest-cov = "^5.0.0"
requests = "^2.32.3"
requests-mock = "^1.12.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
