[tool.poetry]
name = "hexlet-code"
packages = [{include = "PageLoader"}]
version = "0.1.3"
description = ""
authors = ["BananfonBan <bananfonban@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^5.0.0"
requests = "^2.32.3"
requests-mock = "^1.12.1"
pook = "^2.0.0"

[tool.poetry.scripts]
page-loader-2 = "PageLoader.main:page_loader_in_line"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
pytest = "^8.3.2"
pook = "^2.0.0"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
